<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_saque"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.yan.bss.SaqueActivity"
    android:background="#000080">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/valorSaque"
        android:background="@android:color/white"
        android:hint="@string/valor_saque"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:inputType="number" />

    <Button
        android:text="@string/botao_saque"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:id="@+id/sacarButton"
        android:layout_below="@+id/valorSaque"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="50dp"
        android:id="@+id/mensagemSaque"
        android:text="@string/saque"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textAlignment="center"
        android:layout_above="@+id/valorSaque"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/cancelar_saque"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/cancelarSaque" />
</RelativeLayout>
