<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.yan.bss.MainActivity"
    android:background="#000080">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/money"
        android:id="@+id/logoImage"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_name" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="39dp"
        android:id="@+id/cpfText"
        android:hint="@string/digite_cpf"
        android:layout_below="@+id/logoImage"
        android:layout_centerHorizontal="true"
        android:background="@android:color/white"
        android:inputType="number" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/contaText"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/cpfText"
        android:background="@android:color/white"
        android:hint="@string/digite_conta"
        android:inputType="number" />

    <Button
        android:text="@string/acessar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:id="@+id/acessarContaButton"
        android:layout_below="@+id/contaText"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
